--- a/Test_player.html
+++ b/Test_player.html
@@ -35,14 +35,14 @@
 
     .hotspot {
       position: absolute;
-      bottom: 10%; /* Bottom-left placement */
+      top: 5%; /* Top-left placement */
       left: 5%; /* Adjust to match the hotspot area */
       width: 10%; /* Adjust width */
       height: 8%; /* Adjust height */
       z-index: 10; /* Ensure it is above the video */
       pointer-events: auto; /* Allow interaction */
       cursor: pointer; /* Indicate interactivity */
-      background: rgba(255, 0, 0, 0.3); /* Debugging red background */
+      background: transparent; /* Make the box invisible */
     }
   </style>
 </head>
